# fastapi-template

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
backend/: main.py
backend/alembic/: env.py
backend/alembic/versions/: 3cd2d46901ef_create_initial_tables.py
backend/api/: app.py
backend/api/auth/: crud.py  route.py  schema.py
backend/core/: config.py  security.py
backend/jobs/: worker.py
backend/models/: db.py  tables.py
